--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .vscode/settings.json
 .vscode
-.xu_li_de.h.gch
-.xu_li.h.gch
-.doc_ghi_file.h.gch
-.main.exe
+xu_li_de.h.gch
+xu_li.h.gch
+doc_ghi_file.h.gch
+ctdl.h.gch
+main.exe
